--- a/www/css/index.css
+++ b/www/css/index.css
@@ -15,3 +15,13 @@ body {
     text-transform:uppercase;
     width:100%;
 }
+
+#map{
+    width:100%;
+    height: 300px;
+}
+
+.app h1{
+    text-align: center;
+    font-size: 3em;
+}
